--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <!-- <a href="">   <img src="./Payment.png" alt="">      </a>
         <p>Payment</p> -->
         <div class="cal" onclick="openImage()">
-            <a href="#"><img src="./qr-code (1).png" alt=""></a>
+            <a href="#"><img src="./qr-code (1).jpg" alt=""></a>
             <p>QR Code</p>
         </div>
     
@@ -232,7 +232,7 @@
 
 
             // QR IMG
-            fullImage.src = "./qr-code (1).png";
+            fullImage.src = "./qr-code (1)";
 
             // Display the image container
             imageContainer.style.display = "flex";
